[metadata]
name = fiblary
summary = Home Center 2 API Python Library
description-file =
    README.rst
license = Apache-2
author = Klaudiusz Staniek
author-email = klaudiusz@staniek.name
home-page = http://
classifier =
    Environment :: HomeCenter
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    fiblary

[entry_points]
#console_scripts =
#    fibaro = hc2client.shell:main


[build_sphinx]
source-dir = docs/source
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[wheel]
universal = 1
